[package]
name = "rmw_config"
version = "0.0.6"
edition = "2021"
authors = ["gcxfd <i@rmw.link>"]
license = "Apache-2.0"
description = "set / get config from config file and env"
repository = "https://github.com/rmw-lib/rmw_config"
readme = "README.md"
keywords = ["rmw_config"]

[dependencies]
log = "0.4.17"
err = { version = "0.0.5", package = "rmw_err" }
rmw_str = "0.0.7"
parking_lot = "0.12.1"
const-str = "0.4.3"
env_dir = "0.0.7"

[dev-dependencies]

#[[bin]]
# bench = false
# path = "src/main.rs"
# name = "rmw_config"
# [profile.release]
# lto = true
# codegen-units = 1
# debug-assertions = false
# overflow-checks = false
# opt-level = 3
# panic = 'abort'
[features]
default = []
# avif = ["dep:ravif", "dep:rgb"]
#[dependencies.ravif]
#optional = true
#version = "0.6.3"
