[package]
name = "rmw_log"
version = "0.0.7"
edition = "2021"
authors = ["gcxfd <i@rmw.link>"]
license = "Apache-2.0"
description = "set / get config from config file and env"
repository = "https://github.com/rmw-lib/rmw_log"
readme = "README.md"
keywords = ["rmw_log"]

[dependencies]
chrono = "0.4.19"
colored = "2.0.0"
fern = { version = "0.6.1", features = [] }
log = "0.4.17"

[dev-dependencies]

#[[bin]]
# bench = false
# path = "src/main.rs"
# name = "rmw_log"
# [profile.release]
# lto = true
# codegen-units = 1
# debug-assertions = false
# overflow-checks = false
# opt-level = 3
# panic = 'abort'
[features]
default = []
# avif = ["dep:ravif", "dep:rgb"]
#[dependencies.ravif]
#optional = true
#version = "0.6.3"
